[package]
name = "cwab-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.70"
async-trait = "^0.1.0"
cwab = { path = "../cwab" }
serde = { version = "1.0.109", features = ["derive"] }
serde_json = "^1.0.96"
tokio = { version = "1.24.2", features = ["full"] }
